css/wp-biographia.css
@charset "utf-8";
/* CSS Document */

.wp-biographia-container h3, .wp-biographia-container p {
	margin:0 0 10px 0;
	padding:0;
}

.wp-biographia-container-top {
	background: #f2f7fc;
	border-top: 4px solid #000;
	clear: both;
	margin: 20px 0;
	overflow: hidden;
	padding: 20px;
}

.wp-biographia-container-around {
	background: #f2f7fc;
	border: 1px solid #000;
	clear: both;
	margin: 20px 0;
	overflow: hidden;
	padding: 20px;
}

.wp-biographia-container-none {
	background: #f2f7fc;
	border-top:none;
	clear: both;
	margin: 20px 0;
	overflow: hidden;
	padding: 20px;
}

.wp-biographia-pic {
	background: #fff;
	border: 1px solid #e7e7e7;
	float: left;
	height: 100px;
	width: 100px;
	margin: 0 -122px 0 0;
	padding: 10px;
}

.wp-biographia-pic img {
}

.wp-biographia-text {
	float: left;
	margin: 0 0 0 140px;
}

.wp-biographia-list-text li, .wp-biographia-list-icon li {
	display: inline-block;
	list-style-type: none;
	padding-right: 5px;
}

.wp-biographia-list-icon a:link, .wp-biographia-list-icon a:visited {
        text-decoration: none;
        border-bottom: none;
}
.wp-biographia-item-icon {
	height: 32px;
	width: 32px;
}

